# create_maps

./: pyproject.toml
data/vg250_01-01.gk3.shape.ebenen/: aktualitaet.txt
data/vg250_01-01.gk3.shape.ebenen/vg250_ebenen_0101/: VG250_GEM.shx  VG250_KRS.shx  VG250_LAN.shp  VG250_LAN.shx  VG250_LI.shx  VG250_PK.shp  VG250_PK.shx  VG250_RBZ.shp  VG250_RBZ.shx  VG250_STA.shp  VG250_STA.shx  VG250_VWG.shx
output/: selected_polygons.dbf  selected_polygons.shp  selected_polygons.shx  selected_polygons_10.dbf  selected_polygons_10.shp  selected_polygons_10.shx  selected_polygons_100.dbf  selected_polygons_100.shp  selected_polygons_100.shx
src/: main.py
