[tool.poetry]
name = "createmaps"
version = "0.1.0"
description = ""
authors = ["Johanna Hillebrand <Johanna.Hillebrand@hhu.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
